[tool.poetry]
name = "NoTorch"
version = "0.1.0"
description = "A from-scratch deep learning library implementation (no Pytorch) based on micrograd"
authors = ["Lucas Cecchi"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
numpy = "^2.1.1"
micrograd = "^0.1.0"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
